fix: Layout bugs; feat: Add tables for executive committee and board of directors

--- a/src/app/components/link-list/link-list.component.scss
+++ b/src/app/components/link-list/link-list.component.scss
@@ -9,23 +9,36 @@
   gap: $lcc-space--sm;
 
   ul {
-    &:not(.single-column) {
-      display: inline-block;
-      columns: 2;
-      -webkit-columns: 2;
-      -moz-columns: 2;
-    }
+    columns: 1;
+    -webkit-columns: 1;
+    -moz-columns: 1;
 
-    @include respond-to('lt-md') {
-      columns: 1;
-      -webkit-columns: 1;
-      -moz-columns: 1;
+    @include respond-to('gt-md') {
+      &:not(.single-column) {
+        columns: 2;
+        -webkit-columns: 2;
+        -moz-columns: 2;
+      }
     }
   
     li {
+      line-height: 0.75em;
+
+      @include respond-to('gt-xs') {
+        line-height: unset;
+      }
+
       a {
         white-space: nowrap;
-        font-size: $h4;
+        font-size: $h6;
+
+        @include respond-to('gt-xs') {
+          font-size: $h5;
+        }
+
+        @include respond-to('gt-sm') {
+          font-size: $h4;
+        }
   
         cds-icon {
           padding: $lcc-space--xxs;
