--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -18,12 +18,12 @@ $lcc-color--text-secondary: hsl(0, 0%, 60%);
 
 $lcc-color--fg-divider: hsl(0, 0%, 92%);
 
-$lcc-color--bg-main: hsl(0, 0%, 96%);
+$lcc-color--bg-main: hsl(0, 0%, 97%);
 $lcc-color--bg-nav: hsl(0, 0%, 99%);
 $lcc-color--bg-canvas: hsl(0, 0%, 99%);
 $lcc-color--bg-figure: hsl(7, 3%, 12%);
 $lcc-color--bg-screen-header: hsl(7, 3%, 94%);
-$lcc-color--bg-grid-item: hsl(7, 3%, 92%);
+$lcc-color--bg-grid-item: hsl(0, 0%, 97%);
 $lcc-color--bg-table-row-light: hsl(0, 0%, 98%);
 $lcc-color--bg-table-row-dark: hsl(0, 0%, 94%);
 $lcc-color--bg-tooltip: hsl(0, 0%, 27%);
